--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
-{
-  "name": "web-dev-starter",
+  "name": "jsidiots-gulpfile",
   "version": "1.0.0",
   "description": "a basic gulp template for web development",
   "main": "index.js",
