--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.9.2",
+    "gulp-plumber": "^0.6.6",
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.1.0",
     "imagemin-pngquant": "^4.0.0",
