--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jsidiots-gulpfile",
+  "name": "simple-js-browser-template ",
   "version": "1.0.0",
-  "description": "a basic gulp template for web development",
+  "description": "a simple testing ground for running your JS code in the browser",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,17 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.2.1",
-    "del": "^1.1.1",
     "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.9.2",
-    "gulp-plumber": "^0.6.6",
-    "gulp-sass": "^1.3.3",
-    "gulp-uglify": "^1.1.0",
-    "imagemin-pngquant": "^4.0.0",
-    "jshint-stylish": "^1.0.1",
-    "psi": "^1.0.6"
+    "jshint-stylish": "^1.0.1"
   }
 }
